--- a/zhuoyou/toupiao.html
+++ b/zhuoyou/toupiao.html
@@ -13,16 +13,15 @@
             <a class="carte" href="#"></a>
             <a class="return" href="#"></a>
             <p>投票</p>
-          
         </header>
         <main>
             <div class="text">
-                <span>发言讨论结束，请大家投票</span>
-                <a class="play" href="#">                
+                发言讨论结束，请大家投票
+                <a class="play" href="#">
                     <audio controls="controls" autoplay="autoplay">
                         <source src="bgm.mp3" type="audio/mpeg" />
                     </audio>
-            </a>
+                </a>
                 <span class="box"></span>
             </div>
             <p class="vote">点击想投票人的的头像</p>
@@ -172,7 +171,7 @@
             </div>
         </main>
         <footer>
-            <a class="vote-2" href="jieguo.html#">投死</a>
+            <a class="vote-2" href="./jieguo.html">投死</a>
         </footer>
     </body>
 </html>
