--- a/zhuoyou/toupiao.html
+++ b/zhuoyou/toupiao.html
@@ -171,7 +171,7 @@
             </div>
         </main>
         <footer>
-            <a class="vote-2" href="./jieguo.html">投死</a>
+            <a class="vote-2" href="jieguo.html">投死</a>
         </footer>
     </body>
 </html>
