--- a/zhuoyou/toupiao.html
+++ b/zhuoyou/toupiao.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,
         maximum-scale=1,minimum-scale=1,initial-scale=1,user-scalable=no">
-        <link href="../css/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
         <link href="toupiao.css" rel="stylesheet">
         <title>投票页</title>
     </head>
@@ -25,11 +25,12 @@
                 <span class="box"></span>
             </div>
             <p class="vote">点击想投票人的的头像</p>
+            <div class="home">    
             <div class="blocks">
                 <button class="boxs">
                     <div class="box-1">水民</div>
                     <div class="box-2">1号</div>
-                    <div class="ul">
+                    <div class="ul">    
                         <a class="li" href="#"></a>
                         <a class="li" href="#"></a>
                         <a class="li" href="#"></a>
@@ -169,6 +170,7 @@
                     </div>
                 </button>
             </div>
+        </div>
         </main>
         <footer>
             <a class="vote-2" href="jieguo.html">投死</a>
